# blender-orchestrator

./: .gitignore  README.md  config.json  pyproject.toml  readme_human.md
blender_addon/: __init__.py
blender_addon/handlers/: __init__.py  camera.py  curves.py  dimensions.py  floor_plan.py  lighting.py  materials.py  mesh_editing.py  mesh_import.py  metaballs.py  primitives.py  rendering.py  scene_queries.py  skinning.py  spatial.py  texture_application.py  transforms.py  vr_optimization.py
blender_addon/operators/: __init__.py  server_operator.py
blender_addon/server/: __init__.py  http_server.py
blender_addon/templates/: __init__.py  humanoid.py
blender_addon/utils/: __init__.py  serializers.py
docs/: SCENE_BUILDING_GUIDE.md  competitive-analysis.md
examples/: create_david.py  david_sculpture.py
mcp_server/: __init__.py  blender_client.py  server.py
mcp_server/ai_clients/: __init__.py  base.py  config.py  meshy_client.py  registry.py  replicate_client.py  stability_client.py
mcp_server/asset_clients/: __init__.py  polyhaven_client.py
mcp_server/data/: object_dimensions.json
mcp_server/tools/: __init__.py  ai_mesh_generation.py  ai_texture_generation.py  camera.py  curves.py  dimensions.py  floor_plan.py  lighting.py  materials.py  mesh_editing.py  mesh_import.py  metaballs.py  polyhaven.py  primitives.py  rendering.py  scene.py  skinning.py  spatial.py  (+3 more)
plans/: 3p_services_ingtegration_plan.md
scripts/: install_addon.py
skill/: SKILL.md
tests/: _helpers.py  conftest.py  test_dimensions.py  test_floor_plan_utils.py  test_spatial_parser.py
